2014-07-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl:
	  The "flashdata" section equal with the "eedata" section.

2014-07-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl: New option: -l or --limit-defaults
	  Changed "PICRF..." to "RF...".

2014-07-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl:
	  Adapted to the modified px structure.

2014-07-23  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl: Show the default value of the config bits.

2014-07-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl: Bugfix and update.

	* tools/device-help.pl: Show the default value of the config words.

2014-07-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl: Complemented the shortages of the database.

2014-07-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl: Added the missing DEBUG config option
	                        to the enhanced midrange MCUs.

	* tools/cfg-import.pl: A minor update.

2014-07-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl:
	  New tool to prepare the gpcfg-table.c and gpcfg.h.

2014-07-08 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: updated

2014-07-06 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/build-register-db.pl: Updated with SFR bits.

2014-07-04 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/build-register-db.pl: New tool to build a SFR database.

	* tools/device-help.pl, tools/device-manager.pl:
	  Updated to the extended px structure.

	* tools/cfg-import.py: Changed "unsigned" to "unsigned int".

2014-06-30 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/cfg-import.py: typo

2014-06-28 Molnar Karoly <molnarkaroly@users.sf.net>
	* tools/device-help.pl: Updated according to the struct px.

2014-06-21 Molnar Karoly <molnarkaroly@users.sf.net>