@@ -1,4 +1,9 @@
 2014-07-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+	* tools/build-register-db.pl, tools/device-help.pl,
+	  tools/device-manager.pl:
+	  Adapted to the modified px structure.
+
+2014-07-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
 	* tools/device-manager.pl:
 	  The "flashdata" section equal with the "eedata" section.
 
